--- a/index.html
+++ b/index.html
@@ -112,18 +112,6 @@
 						<li><a href="#0">Nuestro menú</a>
 							<ul>
 								<li><a href="#1">Lo mas vendido</a></li>
-								<li><a href="#2">Menu completo</a>
-									<ul>
-										<li><a href="#2-1">Hamburguesas</a></li>
-										<li><a href="#2-2">Milanesas</a></li>
-										<li><a href="#2-3">Phylis y sandwiches</a></li>
-										<li><a href="#2-7">Ensaladas</a></li>
-										<li><a href="#2-4">Hot dog</a></li>
-										<li><a href="#2-8">Para picar</a></li>
-										<li><a href="#2-5">Celiacos</a></li>
-										<li><a href="#2-6">Postres</a></li>
-									</ul>
-								</li>
 							</ul>
 						</li>
 
@@ -131,8 +119,9 @@
 						<li><a href="#3">Ubicación y horarios</a></li>
 
 
-						<!-- DROPDOWN MENU -->
+						<!-- DROPDOWN MENU 
 						<li><a href="#">Contacto</a>
+						-->
 
 
 					</ul>
@@ -199,10 +188,10 @@
 							<!-- Title -->
 							<h2 class="h2-lg">Ubicación y horarios</h2>
 							<!-- Text -->
-							<p class="p-lg grey-color">Horarios: viernes, sábados, domingos y feriados de 11:30AM a 00AM
+							<p class="p-lg grey-color">Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM
 							</p>
 							<div class="container">
-								<div class="estadoTienda" id="estadoTienda"></div>
+								<div class="estadoTienda " id="estadoTienda"></div>
 								<div class="contadorTienda" id="contadorTienda"></div>
 								<a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu"
 									target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
@@ -232,7 +221,7 @@
 							<h2 class="h2-lg">La hamburguesa es mejor cuando se comparte la experiencia</h2>
 
 							<!-- Text -->
-							<p class="p-lg grey-color">una deliciosa excusa para reunirnos en familia o con amigos y
+							<p class="p-lg grey-color">Una deliciosa excusa para reunirnos en familia o con amigos y
 								disfrutar juntos
 								un festín de sabores irresistibles
 							</p>
@@ -339,7 +328,7 @@
 							<h2 id="1" class="h2-xl red-color">Lo más pedido</h2>
 
 							<!-- Text -->
-							<p class="p-xl">Nuestros clientes recomiendan empezar probando...
+							<p class="p-xl">De cada sección...
 							</p>
 
 						</div>
@@ -617,13 +606,13 @@
 								<div class="hover-overlay">
 
 									<!-- Image -->
-									<img class="img-fluid fotosComidas" loading="lazy" src="https://lh3.googleusercontent.com/pw/AIL4fc92wkeymXoS26mVuJ1BKbhgehrg_vfhI-HdG_ppMAK8lC67R0Ntoj04hRaSK_ss4iH9REcOhzsVSdBw9OKh9KL2FEH2z7p8NilazRBq0_7i8JjVM1O3ASnk4bGRO4rSq6fdbANifWxCa-YpyIPdn2PpwAq_bLe1yo9jjM0XREfEHey-KH6ao2h5v9FienLqNvYjmben2ps2zGzSOxPY1U4CLG1uOQcHgdNNqJJySaOAeid6rVVtkclVl8ZnlP4e21w9Gm4h4Gr5oFr_ZeE1Z-uinQffbNm2hJGzgol4nLq0NDk5o4xjiy7e4zAh-ljArN3Z4_ycWBYU4I-NmDzm-we6pm0ylC1j6CboTLasfNCJf2LkRT7zg8wBL3aA95mSGl3M48uVn4KPz0hVSO7ejH1TECTKB9UvdV2nX_e17Rmpm3IAdtQjRXCsd2t4NsnpkrzQVIBrgrNjuALxfctolivN17FL_HIPQB9qJ7pmALmahPD4SKHmFbr_eGAFk6XLIsHleaMsSUBByVcfjJ8f8RKpOSinhIJv27_6SEoEPZS_WozFT4-dvPptGvkJTU3TjUW6no6Rm2KA0eK0swc4GM706f2caJmLfQgJ4Ut_m6wmizcVhbhnl8GgwQX5Dde5Y0cQQaPSlnCP4ca7vueg1-pf_5r8knLCOTGcuTzr_FZ_eam7mqlyAE7x1A0b6qWsif815LeCcC0RlzdtvRGQzXJNtO2lZP_EBsgAtYUmeLdZnGcSwDMNvVshyiHGL53hBYUjNvUS4g1wUdPFctvWj0sPd6e9DVsPWbGtkOO7dtpwPlSFtdOADI0ANGFaX8Gi7SuZQcmBs72k8Uzv-Q5tA2X4NgoG4L9tylOjsqnTwoxzsnC9h3ZDKqbEkUS3q8EIaXJy6wM_1MgBnOKcvnqI7uvMo1ytUz7-f3C-5TpHJhCNK5VKVxFdx8emmvo=w643-h643-s-no?authuser=0"
+									<img class="img-fluid fotosComidas" loading="lazy" src="./images/granero/comidas/phily/carne.webp"
 										alt="menu-image" />
 
 
 									<!-- Zoom Icon -->
 									<div class="menu-img-zoom ico-25">
-										<a  loading="lazy" href="https://lh3.googleusercontent.com/pw/AIL4fc92wkeymXoS26mVuJ1BKbhgehrg_vfhI-HdG_ppMAK8lC67R0Ntoj04hRaSK_ss4iH9REcOhzsVSdBw9OKh9KL2FEH2z7p8NilazRBq0_7i8JjVM1O3ASnk4bGRO4rSq6fdbANifWxCa-YpyIPdn2PpwAq_bLe1yo9jjM0XREfEHey-KH6ao2h5v9FienLqNvYjmben2ps2zGzSOxPY1U4CLG1uOQcHgdNNqJJySaOAeid6rVVtkclVl8ZnlP4e21w9Gm4h4Gr5oFr_ZeE1Z-uinQffbNm2hJGzgol4nLq0NDk5o4xjiy7e4zAh-ljArN3Z4_ycWBYU4I-NmDzm-we6pm0ylC1j6CboTLasfNCJf2LkRT7zg8wBL3aA95mSGl3M48uVn4KPz0hVSO7ejH1TECTKB9UvdV2nX_e17Rmpm3IAdtQjRXCsd2t4NsnpkrzQVIBrgrNjuALxfctolivN17FL_HIPQB9qJ7pmALmahPD4SKHmFbr_eGAFk6XLIsHleaMsSUBByVcfjJ8f8RKpOSinhIJv27_6SEoEPZS_WozFT4-dvPptGvkJTU3TjUW6no6Rm2KA0eK0swc4GM706f2caJmLfQgJ4Ut_m6wmizcVhbhnl8GgwQX5Dde5Y0cQQaPSlnCP4ca7vueg1-pf_5r8knLCOTGcuTzr_FZ_eam7mqlyAE7x1A0b6qWsif815LeCcC0RlzdtvRGQzXJNtO2lZP_EBsgAtYUmeLdZnGcSwDMNvVshyiHGL53hBYUjNvUS4g1wUdPFctvWj0sPd6e9DVsPWbGtkOO7dtpwPlSFtdOADI0ANGFaX8Gi7SuZQcmBs72k8Uzv-Q5tA2X4NgoG4L9tylOjsqnTwoxzsnC9h3ZDKqbEkUS3q8EIaXJy6wM_1MgBnOKcvnqI7uvMo1ytUz7-f3C-5TpHJhCNK5VKVxFdx8emmvo=w643-h643-s-no?authuser=0" class="image-link">
+										<a  loading="lazy" href="./images/granero/comidas/phily/carne.webp" class="image-link">
 											<span class="flaticon-zoom"></span>
 										</a>
 									</div>
@@ -670,12 +659,12 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
-										src="https://lh3.googleusercontent.com/pw/AIL4fc_Jw7oMK-dS-qj1gBkBYeQ1vnP5z-_TjZ0KC-hm5MpIbrlfl8K9S1fr8dyqI8PjMRdbAA9ch5_nKhyQr5EvlbndQhhpp1EAN9fa-ClpgxmPfrX5stmueEjBgxGlb6ENm3srsWUWDaEUW31hOums6G7q_O3OOW0T2MzHVE8pLQH3oAjju_zjarywCxNuDlz7DQgAE9ZrfpjK2l54WTrXUJh2GCDGw_rlpyDUPDJfk3h6VuijdlqZpAQp0kGxhjnwRMHbSp0QDA47842hiCiJLic8_Fe8lnb9hDUDlKbqks9lWdWqMS1ImlaZgKnptvpBAQrvu4vCmXyIxwc-yccTLyOCazxOhUTxUFCdlK5FEXNkx_Or2DFrqYXmM1jtwwQbXAvvVLh8gEryEZjtTDbL6KgSRWI-tTTqd9Fu2YhGCfjHqo7HBHQaBRbR8PBjWRXnDs6K8OfRBqmUood_0cbyCY8CQV9gs5XU9I4asBdVhWo6Z1D1uVPqQ5UUXQ_BqqMG0_oZa-OhqSz98UK95-xQOHh_bJkppXX_9W1rz-FNW4_i6Vkv3ENtcc1CF-_h9SIumqq58MqFaeqjPFuM47Hh5BvSKm0UOyFoeL-Ybv_MIEjIgTlpBpDNgrfQolU57QKrUIty-64jptWLg51ZuwsetGzYOGEMkOS9838OH8GQJcqOovrLxGv-XDGTOmn8s_MN50DUDCGhMhDD4902B5gEkwZc4vvupRnzJFUD7xONlRCsR6jIty4FSFSs3ssNwzlJx7JHvg2k4UjgPgP8Hp1GtCPwu-CFwoGB6hPJR6fGcD4XDr5ZChSk1WCJMLmFTKirgCvZWClmwseWP9SRNA5gEdbyBpD-TSHN1crSvBfxAD7RJn639W5cDdTHxxGm1z7faKOHQ9iNT3gWXmst-5j0p2WZ8LXqnLNLwir0VznEslHf9vy3eleE0zB78vg=w643-h643-s-no?authuser=0" alt="menu-image" />
+										src="./images/granero/comidas/picar/picada caliente.webp" alt="menu-image" />
 
 
 									<!-- Zoom Icon -->
 									<div class="menu-img-zoom ico-25">
-										<a loading="lazy" href="https://lh3.googleusercontent.com/pw/AIL4fc_Jw7oMK-dS-qj1gBkBYeQ1vnP5z-_TjZ0KC-hm5MpIbrlfl8K9S1fr8dyqI8PjMRdbAA9ch5_nKhyQr5EvlbndQhhpp1EAN9fa-ClpgxmPfrX5stmueEjBgxGlb6ENm3srsWUWDaEUW31hOums6G7q_O3OOW0T2MzHVE8pLQH3oAjju_zjarywCxNuDlz7DQgAE9ZrfpjK2l54WTrXUJh2GCDGw_rlpyDUPDJfk3h6VuijdlqZpAQp0kGxhjnwRMHbSp0QDA47842hiCiJLic8_Fe8lnb9hDUDlKbqks9lWdWqMS1ImlaZgKnptvpBAQrvu4vCmXyIxwc-yccTLyOCazxOhUTxUFCdlK5FEXNkx_Or2DFrqYXmM1jtwwQbXAvvVLh8gEryEZjtTDbL6KgSRWI-tTTqd9Fu2YhGCfjHqo7HBHQaBRbR8PBjWRXnDs6K8OfRBqmUood_0cbyCY8CQV9gs5XU9I4asBdVhWo6Z1D1uVPqQ5UUXQ_BqqMG0_oZa-OhqSz98UK95-xQOHh_bJkppXX_9W1rz-FNW4_i6Vkv3ENtcc1CF-_h9SIumqq58MqFaeqjPFuM47Hh5BvSKm0UOyFoeL-Ybv_MIEjIgTlpBpDNgrfQolU57QKrUIty-64jptWLg51ZuwsetGzYOGEMkOS9838OH8GQJcqOovrLxGv-XDGTOmn8s_MN50DUDCGhMhDD4902B5gEkwZc4vvupRnzJFUD7xONlRCsR6jIty4FSFSs3ssNwzlJx7JHvg2k4UjgPgP8Hp1GtCPwu-CFwoGB6hPJR6fGcD4XDr5ZChSk1WCJMLmFTKirgCvZWClmwseWP9SRNA5gEdbyBpD-TSHN1crSvBfxAD7RJn639W5cDdTHxxGm1z7faKOHQ9iNT3gWXmst-5j0p2WZ8LXqnLNLwir0VznEslHf9vy3eleE0zB78vg=w643-h643-s-no?authuser=0"
+										<a loading="lazy" href="./images/granero/comidas/picar/picada caliente.webp"
 											class="image-link">
 											<span class="flaticon-zoom"></span>
 										</a>
@@ -877,9 +866,6 @@
 						<div class="banner-4-txt text-center">
 
 							<!-- Title  -->
-							<h4 class="h4-xl">Garantizamos</h4>
-
-							<!-- Title  -->
 							<h2>!Entrega en 10 minutos!</h2>
 
 							<!-- Text -->
@@ -930,9 +916,10 @@
 								<h5 class="h5-md">Horas de trabajo</h5>
 
 								<!-- Text -->
-								<p>Mon-Fri: 9:00AM - 10:00PM</p>
-								<p>Saturday: 10:00AM - 8:30PM</p>
-								<p>Sunday: 12:00PM - 5:00PM</p>
+								<p>Viernes: 11:30 - 00:00</p>
+								<p>Sábados: 11:30 - 00:00</p>
+								<p>Domingos: 11:30 - 00:00</p>
+								<p>feriados: 11:30 - 00:00</p>
 
 							</div>
 						</div>
