--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
 
 
 		<!-- HERO-4
-			============================================= -->
-		<section id="hero-4" class="bg-fixed hero-section division">
-			<div class="container">
-				<div class="row d-flex align-items-center">
+			============================================= --> 
+		<section id="hero-4" class="bg-fixed hero-section division ">
+			<div class="bordes arregloBordes">
+			<div class="container  ">
+				<div class="row d-flex align-items-center ">
 
 					<!-- HERO TEXT -->
-					<div class="col-md-5">
-						<div class="primerPagina text-center white-color">
+					<div class="col-md-5 ">
+						<div class="primerPagina text-center white-color bordes rounded ">
 
-							<!-- Title -->
 							<h2>Granero66</h2>
 
 							<!-- Text -->
@@ -163,7 +163,7 @@
 							</p>
 
 							<!-- Button -->
-							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">VER MENU</a>
+							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover ">VER MENU</a>
 
 						</div>
 					</div> <!-- END HERO TEXT -->
@@ -171,12 +171,12 @@
 
 				</div> <!-- End row -->
 			</div> <!-- End container -->
+		</div>
 		</section> <!-- END HERO-4 -->
-
 
 		<!-- ABOUT-ubicacion y horarios
 			============================================= -->
-		<section id="3" class="bg-fixed wide-100 about-section division">
+		<section id="i3" class="bg-fixed wide-100 about-section division bordes">
 			<div class="container">
 				<div class="row">
 
@@ -208,7 +208,7 @@
 
 		<!-- ABOUT-2
 			============================================= -->
-		<section id="about-2" class="bg-fixed wide-100 about-section division">
+		<section id="about-2" class="bg-fixed wide-100 about-section division bordes">
 			<div class="container">
 				<div class="row">
 
@@ -711,12 +711,12 @@
 								<div class="hover-overlay">
 
 									<!-- Image -->
-									<img class="img-fluid" src="images/menu/burger-18.jpg" loading="lazy" alt="menu-image" />
+									<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/boom.jpeg" loading="lazy" alt="menu-image" />
 
 
 									<!-- Zoom Icon -->
 									<div class="menu-img-zoom ico-25">
-										<a href="images/menu/burger-18.jpg" class="image-link" >
+										<a href="./images/granero/comidas/hot dog/boom.jpeg" class="image-link" >
 											<span class="flaticon-zoom"></span>
 										</a>
 									</div>
