--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
 			============================================= --> 
 		<section id="hero-4" class="bg-fixed hero-section division ">
 			<div class="bordes arregloBordes">
-			<div class="container  ">
+			<div class="container  centrar">
 				<div class="row d-flex align-items-center ">
 
 					<!-- HERO TEXT -->
 					<div class="col-md-5 ">
-						<div class="primerPagina text-center white-color bordes rounded ">
+						<div class="primerPagina text-center white-color rounded ">
 
-							<h2>Granero66</h2>
+							<h2 class="tituloPrincipal">Granero 66</h2>
 
 							<!-- Text -->
 							<p class="p-md">Basta de las hamburguesas congeladas de fotos perfectas, Granero 66, donde
@@ -163,7 +163,7 @@
 							</p>
 
 							<!-- Button -->
-							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover ">VER MENU</a>
+							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">VER MENU</a>
 
 						</div>
 					</div> <!-- END HERO TEXT -->
@@ -253,13 +253,13 @@
 							<div class="abox-4 text-center mb-40">
 
 								<!-- Icon -->
-								<div class="abox-4-ico"><span class="flaticon-pizza-4"></span></div>
+								<div class="abox-4-ico"><img src="./images/granero/diseños/cupcake black.png" alt=""></div>
 
 								<!-- Title -->
-								<h5 class="h5-lg">Recetas originales</h5>
+								<h5 class="h5-lg">Postres & Meriendas</h5>
 
 								<!-- Text -->
-								<p>Se terminó es de no saber que estas comiendo. Recetas caseras y originales
+								<p>Disfrutá también de nuestros exquisitos postres artesanales, ideales para acompañar en un Almuerzo, Merienda o Cena.
 								</p>
 
 							</div>
@@ -278,7 +278,7 @@
 
 								<!-- Text -->
 								<p>Deléitate con opciones creativas y saludables que te harán amar cada bocado. ¡Una
-									experiencia vegana que no querrás perderte!
+									experiencia vegetariana que no querrás perderte!
 								</p>
 
 							</div>
@@ -290,15 +290,13 @@
 							<div class="abox-4 text-center mb-40">
 
 								<!-- Icon -->
-								<div class="abox-4-ico"><span class="flaticon-moped"></span></div>
+								<div class="abox-4-ico"><img src="./images/granero/diseños/dog2 black.png" alt=""></span></div>
 
 								<!-- Title -->
-								<h5 class="h5-lg">Fastest Delivery</h5>
+								<h5 class="h5-lg">Pet Friendly</h5>
 
 								<!-- Text -->
-								<p>Porta semper lacus cursus, feugiat primis ultrice in ligula risus auctor tempus
-									feugiat dolor impedit
-									felis magna dolor vitae
+								<p>Tenemos un espacio para que puedas venir con tu mascota.
 								</p>
 
 							</div>
@@ -866,7 +864,7 @@
 						<div class="banner-4-txt text-center">
 
 							<!-- Title  -->
-							<h2>!Entrega en 10 minutos!</h2>
+							<h2>¡Entrega en 10 minutos!</h2>
 
 							<!-- Text -->
 							<p class="p-lg">El método Granero 66 es la eficiencia Americana con la carne Argentina.
