--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 		<!-- ABOUT-ubicacion y horarios
 			============================================= -->
-		<section id="i3" class="bg-fixed wide-100 about-section division bordes">
+		<section id="3" class="bg-fixed wide-100 about-section division bordes">
 			<div class="container">
 				<div class="row">
 
