--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description"
 		content="Tu Hamburguesa en Tandil en un lugar tranquilo. Un restaurante de Fast Food con el estilo de la Ruta 66 y Exposición de Autos Antiguos. Un lugar para visitar con amigos, en familia y mascota." />
 	<meta name="keywords"
-		content="hamburguesas, restaurante, restoran, comida, Tandil, cerca, tranquilo, mejor, calidad">
+		content="hamburguesas, restaurante, restoran, comida, Tandil, cerca, tranquilo, mejor, calidad, mostaza">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- SITE TITLE -->
@@ -73,7 +73,7 @@
 	<div id="loader-wrapper">
 		<div id="loader">
 			<div class="cssload-spinner">
-				<img src="./images/iso-66.png" alt="">
+				<img src="./images/iso-66.png" alt="cargando">
 			</div>
 		</div>
 	</div>
@@ -109,14 +109,14 @@
 
 
 						<!-- DROPDOWN MENU -->
-						<li><a href="#0">Nuestro menú</a>
+						<li><a href="#Principal">Nuestro menú</a>
 							<ul>
-								<li><a href="#1">Lo mas vendido</a></li>
+								<li><a href="#LoMasVendido">Lo mas vendido</a></li>
 							</ul>
 						</li>
 
 						<!-- DROPDOWN MENU -->
-						<li><a href="#3">Ubicación y horarios</a></li>
+						<li><a href="#UbicacionYhorarios">Ubicación y horarios</a></li>
 
 
 						<!-- DROPDOWN MENU 
@@ -176,7 +176,7 @@
 
 		<!-- ABOUT-ubicacion y horarios
 			============================================= -->
-		<section id="3" class="bg-fixed wide-100 about-section division bordes">
+		<section id="UbicacionYhorarios" class="bg-fixed wide-100 about-section division bordes">
 			<div class="container">
 				<div class="row">
 
@@ -221,13 +221,12 @@
 							<h2 class="h2-lg">La hamburguesa es mejor cuando se comparte la experiencia</h2>
 
 							<!-- Text -->
-							<p class="p-lg grey-color">Una deliciosa excusa para reunirnos en familia o con amigos y
-								disfrutar juntos
-								un festín de sabores irresistibles
+							<p class="p-lg grey-color">Una deliciosa excusa para reunirnos en familia o con amigos, y disfrutar juntos un festín de sabores irresistibles,
+								al que podés sumarle un toque de mostaza para darle un nuevo nivel de sabor y emoción a cada bocado.
 							</p>
 
 							<!-- Button -->
-							<a href="menu-2.html" class="btn btn-md btn-red tra-red-hover">Explorar menu completo</a>
+							<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">Explorar menu completo</a>
 
 						</div>
 					</div> <!-- END ABOUT TEXT -->
@@ -253,7 +252,7 @@
 							<div class="abox-4 text-center mb-40">
 
 								<!-- Icon -->
-								<div class="abox-4-ico"><img src="./images/granero/diseños/cupcake black.png" alt=""></div>
+								<div class="abox-4-ico"><img src="./images/granero/diseños/cupcake black.png" alt="Postres & Meriendas"></div>
 
 								<!-- Title -->
 								<h5 class="h5-lg">Postres & Meriendas</h5>
@@ -290,7 +289,7 @@
 							<div class="abox-4 text-center mb-40">
 
 								<!-- Icon -->
-								<div class="abox-4-ico"><img src="./images/granero/diseños/dog2 black.png" alt=""></span></div>
+								<div class="abox-4-ico"><img src="./images/granero/diseños/dog2 black.png" alt="Pet Friendly"></span></div>
 
 								<!-- Title -->
 								<h5 class="h5-lg">Pet Friendly</h5>
@@ -323,7 +322,7 @@
 						<div class="section-title mb-60 text-center">
 
 							<!-- Title 	-->
-							<h2 id="1" class="h2-xl red-color">Lo más pedido</h2>
+							<h2 id="LoMasVendido" class="h2-xl red-color">Lo más pedido</h2>
 
 							<!-- Text -->
 							<p class="p-xl">De cada sección...
@@ -348,7 +347,7 @@
 									<!-- Image -->
 									<img class="img-fluid fotosComidas " loading="lazy"
 										src="./images/granero/comidas/hamburguesas/las vegas.webp"
-										alt="menu-image" />
+										alt="hamburguesa las vegas" />
 
 									<!-- Zoom Icon -->
 									<div class="menu-img-zoom ico-25">
@@ -400,7 +399,7 @@
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
 										src="./images/granero/comidas/hamburguesas/springfield.webp"
-										alt="menu-image" />
+										alt="hamburguesa" />
 
 
 									<!-- Zoom Icon -->
@@ -452,7 +451,7 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
-										src="./images/granero/comidas/hamburguesas/chicago.webp" alt="menu-image" />
+										src="./images/granero/comidas/hamburguesas/chicago.webp" alt="hamburguesa chicago" />
 
 
 									<!-- Zoom Icon -->
@@ -503,7 +502,7 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
-										src="./images/granero/comidas/milanesas/seligman.webp" alt="menu-image" />
+										src="./images/granero/comidas/milanesas/seligman.webp" alt="milanesa seligman" />
 
 
 									<!-- Zoom Icon -->
@@ -554,7 +553,7 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas"
-										src="./images/granero/comidas/milanesas/historica.webp" loading="lazy" alt="menu-image" />
+										src="./images/granero/comidas/milanesas/historica.webp" loading="lazy" alt="milanesa historica" />
 
 
 									<!-- Zoom Icon -->
@@ -605,7 +604,7 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy" src="./images/granero/comidas/phily/carne.webp"
-										alt="menu-image" />
+										alt="phyli de carne" />
 
 
 									<!-- Zoom Icon -->
@@ -657,7 +656,7 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
-										src="./images/granero/comidas/picar/picada caliente.webp" alt="menu-image" />
+										src="./images/granero/comidas/picar/picada caliente.webp" alt="picada caliente" />
 
 
 									<!-- Zoom Icon -->
@@ -709,7 +708,7 @@
 								<div class="hover-overlay">
 
 									<!-- Image -->
-									<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/boom.jpeg" loading="lazy" alt="menu-image" />
+									<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/boom.jpeg" loading="lazy" alt="hot dog boom" />
 
 
 									<!-- Zoom Icon -->
