--- a/pages/museo.html
+++ b/pages/museo.html
@@ -78,7 +78,10 @@
 	</header> <!-- END HEADER-3 -->
 
     <main>
-        </section>
+        <div class="scrollbar-count">
+			<img class="imagenScroll" src="../images/granero/museo/cartel 66.webp" alt="">
+			<span id="scroll-count">0 </span>KM 
+		</div>
 		<section class="fondoRuta">
 			<div class="imagenUSA">
 				<img src="../images/granero/museo/outline-drawing-of-usa-map-free-png.webp" alt="Tu Imagen">
