--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 
 								<h4 class="h4-lg txt-300">Conoce nuestro</h4>
 								<h4 class="h4-xl">museo de autos</h4>
-								<a href="https://www.instagram.com/p/CvdKzN0JAa8/" target="_blank" class="btn btn-red tra-red-hover">Conocer mas</a>
+								<a href="./pages/museo.html" class="btn btn-red tra-red-hover">Conocer mas</a>
 
 							</div>
 						</div>
