--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<!-- DROPDOWN MENU -->
 						<li><a href="#Principal">Nuestro menú</a>
 							<ul>
-								<li><a href="#LoMasVendido">Lo mas vendido</a></li>
+								<li><a href="#vendido">Lo mas vendido</a></li>
 							</ul>
 						</li>
 
@@ -161,8 +161,6 @@
 							<p class="p-md">Basta de las hamburguesas congeladas de fotos perfectas, Granero 66, donde
 								lo que importa es la calidad y el sabor.
 							</p>
-
-							<a href="https://www.google.com/search?q=granero+66&rlz=1C1ALOY_esAR1071AR1071&oq=granero+66&gs_lcrp=EgZjaHJvbWUqCQgAECMYJxiKBTIJCAAQIxgnGIoFMg0IARAuGK8BGMcBGIAEMgYIAhBFGDsyBwgDEAAYgAQyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQgyMjUwajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#lrd=0x95911f717748a34f:0x5fc6f216e0bd6b0d,1,,,,">Valoranos</a>
 
 							<!-- Button -->
 							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">VER MENU</a>
@@ -363,7 +361,7 @@
 						<div class="section-title mb-60 text-center">
 
 							<!-- Title 	-->
-							<h2 id="LoMasVendido" class="h2-xl red-color">Lo más pedido</h2>
+							<h2 id="vendido" class="h2-xl red-color">Lo más pedido</h2>
 
 							<!-- Text -->
 							<p class="p-xl">De cada sección...
@@ -982,6 +980,12 @@
 	<script src="js/jquery.datetimepicker.full.js"></script>
 	<script src="js/jquery.ajaxchimp.min.js"></script>
 	<script src="js/ubicacion.js"></script>
+	<script src="js/booking-form.js"></script>
+	<script src="js/comment-form.js"></script>
+	<script src="js/contact-form.js"></script>
+	<script src="js/jquery.easing.js"></script>
+	<script src="js/jquery.flexslider.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
 
 	<!-- Custom Script -->
 	<script src="js/custom.js"></script>
