--- a/pages/museo.html
+++ b/pages/museo.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/museo.css">
 
-    <!-- FAVICON AND TOUCH ICONS -->
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="../css/museo.css">
+
+	<!-- FAVICON AND TOUCH ICONS -->
 	<link rel="shortcut icon" href="../images/iso-66.png" type="image/x-icon">
 	<link rel="icon" href="../images/iso-66.png" type="image/x-icon">
 	<link rel="apple-touch-icon" sizes="152x152" href="images/iso-66.png">
@@ -42,8 +43,9 @@
 	<!-- RESPONSIVE CSS -->
 	<link href="../css/responsive.css" rel="stylesheet">
 </head>
+
 <body>
-    <!-- HEADER-3
+	<!-- HEADER-3
 		============================================= -->
 	<header id="header-3" class="header navik-header header-transparent header-shadow">
 		<div class="container">
@@ -51,8 +53,7 @@
 			<div class="navik-header-container">
 				<!-- LOGO IMAGE -->
 				<div class="logo" data-sticky-logo="../images/granero/logos/Logo granero png (1).png">
-					<a href="#LA"><img src="../images/granero/logos/Logo granero png (1).png"
-							alt="header-logo" /></a>
+					<a href="#LA"><img src="../images/granero/logos/Logo granero png (1).png" alt="header-logo" /></a>
 				</div>
 				<!-- BURGER MENU -->
 				<div class="burger-menu">
@@ -76,63 +77,263 @@
 			</div> <!-- END NAVIGATION MENU -->
 		</div> <!-- End container -->
 	</header> <!-- END HEADER-3 -->
-
-    <main>
-        <div class="scrollbar-count">
-			<img class="imagenScroll" src="../images/granero/museo/cartel 66.webp" alt="">
-			<span id="scroll-count">0 </span>KM 
+	<div class="centrado">
+		<button class="botMapa"><img class="imagenBotonMapa" src="../images/granero/diseños/mapa.png" alt=""></button>
+		<div class="lineaDeTiempo">
+			<div class="centrado">
+	
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="">◉</a>
+					<p class="miniCartel">Chi</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="">◉</a>
+					<p class="miniCartel">Springfield</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="">◉</a>
+					<p class="miniCartel">Oklahoma</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="">◉</a>
+					<p class="miniCartel">Shamrock</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="">◉</a>
+					<p class="miniCartel">Alburquerque</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="">◉</a>
+					<p class="miniCartel">Flagstaff</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="#LV">◉</a>
+					<p class="miniCartel">Las vegas</p>
+				</div>
+				<div class="punto lineaCiudades">
+					<a class="colorAmarillo" href="#LA">◉</a>
+					<p class="miniCartel">Los Angeles</p>
+				</div>
+			</div>
 		</div>
-		<section class="fondoRuta">
-			<div class="imagenUSA">
-				<img src="../images/granero/museo/outline-drawing-of-usa-map-free-png.webp" alt="Tu Imagen">
-				<div class="enlaces-fijos">
-					<a href="#" class="enlace losAngeles">Los Angeles</a>
-					<a href="#LA" class="enlace losAngelesPunto">◉</a>
-					<a href="#" class="enlace lasVegas">Las Vegas</a>
-					<a href="#" class="enlace lasVegasPunto">◉</a>
-					<a href="#" class="enlace flagstaff">Flagstaff</a>
-					<a href="#" class="enlace flagstaffPunto">◉</a>
-					<a href="#" class="enlace alburquerque">Alburquerque</a>
-					<a href="#" class="enlace alburquerquePunto">◉</a>
-					<a href="#" class="enlace shamrock">Shamrock</a>
-					<a href="#" class="enlace shamrockPunto">◉</a>
-					<a href="#" class="enlace oklahomaCity">Oklahoma City</a>
-					<a href="#" class="enlace oklahomaCityPunto">◉</a>
-					<a href="#" class="enlace springfield">Springfield</a>
-					<a href="#" class="enlace springfieldPunto">◉</a>
-					<a href="#" class="enlace chicago">Chicago</a>
-					<a href="#" class="enlace chicagoPunto">◉</a>
-					<img class="enlace cartelRuta66" src="../images/granero/museo/543626.png" alt="">
-					<img class="enlace cartelAuto" src="../images/granero/museo/8be6d764b265d58c4d92e4ab1364d218-coche-de-poca-brillante.png" alt="">
-					<img class="enlace banderaUSA" src="../images/granero/museo/Flag_of_the_United_States.svg.webp" alt="">
+	</div>
+	<main>
+		<div class="scrollbar-count">
+			<img class="imagenScroll" src="../images/granero/museo/cartel 66.webp" alt="">
+			<span id="scroll-count">0 </span>KM
+		</div>
+		<section class="bordesCidudades">
+			<div class="fondoRuta">
+				<div class="imagenUSA">
+					<img src="../images/granero/museo/outline-drawing-of-usa-map-free-png.webp" alt="Tu Imagen">
+					<div class="enlaces-fijos">
+						<a href="#" class="enlace losAngeles">Los Angeles</a>
+						<a href="#LA" class="enlace losAngelesPunto">◉</a>
+						<a href="#" class="enlace lasVegas">Las Vegas</a>
+						<a href="#LV" class="enlace lasVegasPunto">◉</a>
+						<a href="#" class="enlace flagstaff">Flagstaff</a>
+						<a href="#" class="enlace flagstaffPunto">◉</a>
+						<a href="#" class="enlace alburquerque">Alburquerque</a>
+						<a href="#" class="enlace alburquerquePunto">◉</a>
+						<a href="#" class="enlace shamrock">Shamrock</a>
+						<a href="#" class="enlace shamrockPunto">◉</a>
+						<a href="#" class="enlace oklahomaCity">Oklahoma City</a>
+						<a href="#" class="enlace oklahomaCityPunto">◉</a>
+						<a href="#" class="enlace springfield">Springfield</a>
+						<a href="#" class="enlace springfieldPunto">◉</a>
+						<a href="#" class="enlace chicago">Chicago</a>
+						<a href="#CHIC" class="enlace chicagoPunto">◉</a>
+						<img class="enlace cartelRuta66" src="../images/granero/museo/543626.png" alt="">
+						<img class="enlace cartelAuto"
+							src="../images/granero/museo/8be6d764b265d58c4d92e4ab1364d218-coche-de-poca-brillante.png"
+							alt="">
+						<img class="enlace banderaUSA" src="../images/granero/museo/Flag_of_the_United_States.svg.webp"
+							alt="">
+					</div>
 				</div>
 			</div>
 		</section>
-		<section id="LA" class="sectionLosAngeles">
-			<div class="cajaTitulo">
-				<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
-				<h2>Los Angeles</h2>
-				<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
-			</div>
-			<div class="informacionCiudad">
-				<div>
-					<img class="imgCarousel" src="../images/granero/museo/la/3a1f69f332d8f3313ce28bd128279d77.jpg" alt="">
+		<section id="CHIC" class="bordesCidudades">
+			<div class="sectionChicago">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Chicago</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
-				<p class="cajaContenido">Los Ángeles es una ciudad icónica ubicada en California, conocida por su diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland. 
-					Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
-					La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se extendía desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera, 
-					letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de la construcción de autopistas modernas, todavía atrae a entusiastas de la historia 
-					de carreteras.</p>
+				<div class="informacionCiudadChicago">
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/la/1140-hollywood-walk-of-fame-esp.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Ciudad de Los Angeles</a>
+								</div>
+								<img src="../images/granero/ciudades/la/1200px-LA_Skyline_Mountains2.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Rodeo Drive Beverly Hills</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/la/header-rodeo-drive-GOBH0222-fe862bbd02fe47c3a18e315f4285fb76.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Cartel Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/la/Hollywood_Sign_(Zuschnitt).jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Observatorio Griffith</a>
+								</div>
+								<img src="../images/granero/ciudades/la/99.jpg">
+							</li>
+						</ul>
+					</div>
+					<p class="cajaContenido">Los Ángeles es una ciudad icónica ubicada en California, conocida por su
+						diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland.
+						Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
+						La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se
+						extendía
+						desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera,
+						letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de
+						la
+						construcción de autopistas modernas, todavía atrae a entusiastas de la historia
+						de carreteras.</p>
+				</div>
 			</div>
 		</section>
-			
 		
-    </main>
-    <footer>
+		<section id="LV" class="bordesCidudades">
+			<div class="sectionLasVegas">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Las Vegas</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudad">
+					<p class="cajaContenido">Los Ángeles es una ciudad icónica ubicada en California, conocida por su
+						diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland.
+						Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
+						La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se
+						extendía
+						desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera,
+						letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de
+						la
+						construcción de autopistas modernas, todavía atrae a entusiastas de la historia
+						de carreteras.</p>
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 1</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/lv/230705091855-05-msg-sphere-las-vegas-full-169.webp">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 2</a>
+								</div>
+								<img src="../images/granero/ciudades/lv/322f687a-ed74-46f7-851e-161ace9241ad.webp">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 3</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/lv/397187_8_6413_650_488_119001_VAId1047Seq1IMGa07042a36bcb80d059fa1d927253865a.webp">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 4</a>
+								</div>
+								<img src="../images/granero/ciudades/lv/las-vegas_d.jpg.image.1296.974.high.webp">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 5</a>
+								</div>
+								<img src="../images/granero/ciudades/lv/the-strip.jpg">
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="../js/museo.js"></script>
+		<section id="LA" class="bordesCidudades">
+			<div class="sectionLosAngeles">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Los Angeles</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudad">
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/la/1140-hollywood-walk-of-fame-esp.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Ciudad de Los Angeles</a>
+								</div>
+								<img src="../images/granero/ciudades/la/1200px-LA_Skyline_Mountains2.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Rodeo Drive Beverly Hills</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/la/header-rodeo-drive-GOBH0222-fe862bbd02fe47c3a18e315f4285fb76.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Cartel Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/la/Hollywood_Sign_(Zuschnitt).jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Observatorio Griffith</a>
+								</div>
+								<img src="../images/granero/ciudades/la/99.jpg">
+							</li>
+						</ul>
+					</div>
+					<p class="cajaContenido">Los Ángeles es una ciudad icónica ubicada en California, conocida por su
+						diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland.
+						Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
+						La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se
+						extendía
+						desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera,
+						letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de
+						la
+						construcción de autopistas modernas, todavía atrae a entusiastas de la historia
+						de carreteras.</p>
+				</div>
+			</div>
+		</section>
+
+
+	</main>
+	<footer>
+
+	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+	<script src="../js/museo.js"></script>
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 	<script src="../js/modernizr.custom.js"></script>
@@ -149,4 +350,5 @@
 	<!-- Custom Script -->
 	<script src="../js/custom.js"></script>
 </body>
+
 </html>
